# hdk-rs

./: Cargo.toml  README.md
.github/workflows/: clippy.yml
archive/: Cargo.toml
archive/src/: crypto.rs  lib.rs  structs.rs
archive/src/bar/: mod.rs  reader.rs  structs.rs  tests.rs  writer.rs
archive/src/sharc/: mod.rs  reader.rs  structs.rs  tests.rs  writer.rs
comp/: Cargo.toml
comp/src/: lib.rs
comp/src/lzma/: segment.rs
comp/src/zlib/: mod.rs  reader.rs  writer.rs
firmware/: Cargo.toml
firmware/src/pup/: reader.rs  writer.rs
firmware/src/sce/: crypto.rs
hdk-archive/: Cargo.toml
hdk-archive/benches/: repack-roundtrip.rs
hdk-archive/src/: crypto.rs  lib.rs  structs.rs
hdk-archive/src/bar/: builder.rs  mod.rs  reader.rs  structs.rs  tests.rs  writer.rs
hdk-archive/src/mapper/: mod.rs
hdk-archive/src/sharc/: builder.rs  cryptor.rs  mod.rs  reader.rs  structs.rs  tests.rs  writer.rs
hdk-archive/src/sharc_new/: builder.rs  cryptor.rs  mod.rs  structs.rs  tests.rs
hdk-comp/: Cargo.toml
hdk-comp/src/: lib.rs
hdk-comp/src/lzma/: mod.rs  reader.rs  segment.rs  tests.rs  writer.rs
hdk-comp/src/zlib/: mod.rs  reader.rs  tests.rs  writer.rs
hdk-firmware/: Cargo.toml
hdk-firmware/src/: lib.rs
hdk-firmware/src/pkg/: mod.rs  reader.rs  structs.rs  writer.rs
hdk-firmware/src/pup/: mod.rs  reader.rs  structs.rs  writer.rs
hdk-firmware/src/sce/: crypto.rs  errors.rs  mod.rs  reader.rs  structs.rs  writer.rs
hdk-mdl/examples/: hm2json.rs
hdk-mdl/src/: export.rs  lib.rs
hdk-sdat/: Cargo.toml
hdk-sdat/src/: block.rs  compression.rs  crypto.rs  error.rs  headers.rs  lib.rs  memory.rs  options.rs  reader.rs  tests.rs  writer.rs
hdk-secure/: Cargo.toml
hdk-secure/src/: modes.rs  tests.rs  writer.rs
hdk-secure/src/blowfish/: mod.rs  modes.rs
hdk-secure/src/hash/: mod.rs
hdk-secure/src/xtea/: mod.rs
hdk-wasm/: Cargo.toml
hdk-wasm/examples/unpack_sdat/: README.md  index.html  unpack.js
hdk-wasm/src/: lib.rs  secure.rs
hdk-wasm/src/bar/: mod.rs  reader.rs  structs.rs  writer.rs
hdk-wasm/src/comp/: mod.rs
hdk-wasm/src/mapper/: mod.rs
hdk-wasm/src/sdat/: mod.rs  reader.rs  structs.rs  writer.rs
hdk-wasm/src/secure/: mod.rs
hdk-wasm/src/sharc/: reader.rs  structs.rs  writer.rs
sdat/src/: block.rs  lib.rs  reader.rs  tests.rs  writer.rs
secure/: Cargo.toml
secure/src/: lib.rs  reader.rs  tests.rs  writer.rs
secure/src/blowfish/: modes.rs
secure/src/xtea/: mod.rs  modes.rs
