[package]
name = "archive"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
byteorder = "1.5.0"
ctr = "0.9.2"
binrw = "0.15.0"
num_enum = "0.7.5"
flate2 = "1.1.5"
rand = "0.9.2"
enumflags2 = "0.7.12"
sha1_smol = "1.0.1"

# Local crates
comp = { path = "../comp" }
secure = { path = "../secure" }

[dev-dependencies]
sha1 = "0.11.0-rc.3"
