[package]
name = "hdk-archive"
version = "0.1.0"
edition = "2024"

[features]
cloudflare_zlib = ["flate2/cloudflare_zlib"]
isal = ["hdk-comp/isal"]
rayon = ["dep:rayon"]

[dependencies]
aes = "0.8.4"
byteorder = "1.5.0"
ctr = "0.9.2"
binrw = "0.15.0"
num_enum = "0.7.5"
flate2 = "1.1.5"
rand = "0.9.2"
enumflags2 = "0.7.12"
sha1_smol = "1.0.1"
walkdir = "2.5.0"
fancy-regex = "0.17.0"

# hdk-rs dependencies
hdk-comp = { path = "../hdk-comp" }
hdk-secure = { path = "../hdk-secure" }
smallvec = "1.15.1"
rayon = { version = "1.11.0", optional = true }

[dev-dependencies]
sha1 = "0.11.0-rc.3"
criterion = "0.8.2"

[[bench]]
name = "repack-roundtrip"
harness = false
