[package]
name = "hdk-firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
byteorder = "1.5.0"
cbc = "0.1.2"
ctr = "0.9.2"
flate2 = "1.1.5"
sha1_smol = "1.0.1"
thiserror = "2.0.17"
p192 = { version = "0.13.0", features = ["arithmetic"] }
elliptic-curve = { version = "0.13.8", features = ["sec1", "arithmetic"] }
crypto-bigint = "0.5.5"
