[package]
name = "hdk-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
hdk-archive = { git = "https://github.com/ZephyrCodesStuff/hdk-rs", branch = "main" }
hdk-sdat = { git = "https://github.com/ZephyrCodesStuff/hdk-rs", branch = "main" }
hdk-secure = { git = "https://github.com/ZephyrCodesStuff/hdk-rs", branch = "main" }
hdk-comp = { git = "https://github.com/ZephyrCodesStuff/hdk-rs", branch = "main" }

wasm-bindgen = "0.2.110"
js-sys = "0.3.87"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
uuid = { version = "1.21.0", features = ["v4", "js"] }

# Needed to build CTR wrappers against hdk-secure's block ciphers
ctr = "0.9"
generic-array = "0.14"
cipher = "0.4"

[profile.release]
opt-level = "z"
lto = true
